--- a/users/templates/users/estudante_detail.html
+++ b/users/templates/users/estudante_detail.html
@@ -376,31 +376,34 @@
 
             <br><br>
             &nbsp;&nbsp;Relatos Quinzenais:<br>
-            
-                {% for evento, relato, ordem, avals in alocado.get_relatos %}
-                    {% if relato %}
-                        <a style="padding-left: 18px;" href="{% url 'relato_avaliar' relato.id ordem%}">
-                            {{ordem|add:1}} - Relato {{evento.endDate}} : Preenchido pelo estudante em {{relato.momento}}
-                        </a>
-                        
-                        <ul style="margin-bottom: 8px; padding-left: 64px;">
-                            {% for aval in avals %}
-                            <li>{{aval.objetivo}} = {{aval.nota}}</li>
-                            {% endfor %}
-                        </ul>
+            {% for evento, relato, ordem in alocado.get_relatos %}
+                <p style="padding-left: 18px;">
+                {% if relato %}
+                    <a href="{% url 'relato_visualizar' relato.id %}">
+                        {{ordem|add:1}} - Relato {{evento.endDate}} : Preenchido pelo estudante em {{relato.momento}}
+                    </a>
+                    {% if relato.avaliacao >= 0 %}
+                        {% if relato.avaliacao > 0 %}
+                            <span style="background-color:#eef;" data-toggle="tooltip" data-html="true" animation="true" title="Acima do desempenho esperado">
+                                &#128077;
+                            </span> 
+                        {% else %}
+                            <span style="background-color:#eef;" data-toggle="tooltip" data-html="true" animation="true" title="Abaixo do desempenho esperado">
+                                &#128078;
+                            </span>
+                        {% endif %}
                     {% else %}
-                        <p style="padding-left: 18px;">{{ordem|add:1}} - Relato {{evento.endDate}} : Relato não preenchido pelo estudante</p>
+                        <span style="background-color:#eef;" data-toggle="tooltip" data-html="true" animation="true" title="Não conferido pelo orientador">
+                            &#10060;
+                        </span>
+                        
                     {% endif %}
-                    
-                {% endfor %}
-            
-
-
-
-
-
-
-
+                {% else %}
+                    {{ordem|add:1}} - Relato {{evento.endDate}} : Relato não preenchido pelo estudante
+                {% endif %}
+                </p>
+                
+            {% endfor %}
 
         {% endfor %}
     {% endif %}
