novo sistema de controle de relatos

--- a/professores/templates/professores/relato_avaliar.html
+++ b/professores/templates/professores/relato_avaliar.html
@@ -103,7 +103,7 @@
            Não entregue
         {% endif %}  
         <br>
-        <textarea id="relato" name="relato" rows="8" cols="160" maxlength="4096" disabled>{{relato.texto}}</textarea><br>
+        <textarea id="relato" name="relato" rows="10" cols="160" maxlength="4096" disabled>{{relato.texto}}</textarea><br>
 
         <label>Desempenho esperado</label>:&nbsp;&nbsp;&nbsp;&nbsp;
         <div class="custom-control custom-radio custom-control-inline">
@@ -233,7 +233,7 @@
 
   {% endfor %}
 
-  <label for="observacoes">Informe suas observações para a coordenação do PFEß.</label><br>
+  <label for="observacoes">Informe suas observações para a coordenação do PFE.</label><br>
   <textarea id="observacoes" name="observacoes" rows="18" cols="164" maxlength="4096"></textarea>
 
   <p>&nbsp;</p>
