--- a/documentos/templates/mensagem_certificados.html
+++ b/documentos/templates/mensagem_certificados.html
@@ -134,13 +134,11 @@
       {% if formatada %}&nbsp;&nbsp;&nbsp;&nbsp;{% else %}%20%20%20%20{% endif %}
       Primeiramente muito obrigado pela parceria com o Insper no Projeto Final de Engenharia. 
       Gostaríamos de agradecer sua participação como mentor{% if certificado.usuario.genero == 'F' %}a{% endif %} no Projeto Final de Engenharia do Insper.
-      Esperamos que tenha tido uma boa experiência com nossos estudantes e agradecemos muito por todo seu tempo dedicado.
-      Foi muito bom poder ter nossos estudantes trabalhando com toda a equipe da {{certificado.projeto.organizacao}}.%20{% if formatada %}%3Cb%3E{% endif %}%0D%0A
+      Esperamos que tenha tido uma boa experiência com nossos estudantes e agradecemos muito por todo seu tempo dedicado e bem como da equipe da {{certificado.projeto.organizacao}}.%20{% if formatada %}%3Cb%3E{% endif %}%0D%0A
       %0D%0A
 
       {% if formatada %}&nbsp;&nbsp;&nbsp;&nbsp;{% else %}%20%20%20%20{% endif %}
-      Gostaríamos de coletar alguns feedbacks de você sobre o processo.
-      Seria algo curto mesmo, para saber se tudo correu bem e se você tem alguma sugestão de como podemos fazer no futuro, são basicamente 4 perguntas.
+      Gostaríamos de coletar um feedbacks bem curto mesmo, para saber se tudo correu bem e se você tem alguma sugestão para fazermos no futuro, são basicamente 4 perguntas.
       O link do formulário está em https://pfe.insper.edu.br/organizacoes/projeto_feedback%20{% if formatada %}%3Cb%3E{% endif %}%0D%0A
 
   {% endif %}
@@ -150,7 +148,7 @@
 {% if certificado.documento %}
     %0D%0A
     {% if formatada %}&nbsp;&nbsp;&nbsp;&nbsp;{% else %}%20%20%20%20{% endif %}
-    A carta que preparamos sobre sua contribuição se encontra em:%20
+    Preparamos um documento sobre sua contribuição que se encontra em:%20
     {% if formatada %}%3Ca href='{{servidor}}{{ certificado.documento.url }}' target='_blank' rel='noopener noreferrer'%3E{% endif %}{{servidor}}{{ certificado.documento.url }}{% if formatada %}%3C%2Fa%3E%3Cbr%3E{% endif %}%0D%0A
 {% endif %}
 
