--- a/documentos/templates/mensagem_certificados.html
+++ b/documentos/templates/mensagem_certificados.html
@@ -138,7 +138,7 @@
       %0D%0A
 
       {% if formatada %}&nbsp;&nbsp;&nbsp;&nbsp;{% else %}%20%20%20%20{% endif %}
-      Gostaríamos de coletar um feedbacks bem curto mesmo, para saber se tudo correu bem e se você tem alguma sugestão para fazermos no futuro, são basicamente 4 perguntas.
+      Gostaríamos de coletar alguns feedbacks seus, algo bem curto mesmo, para saber se tudo correu bem e se você tem alguma sugestão para fazermos no futuro, são 4 perguntas.
       O link do formulário está em https://pfe.insper.edu.br/organizacoes/projeto_feedback%20{% if formatada %}%3Cb%3E{% endif %}%0D%0A
 
   {% endif %}
