controle de data para gerar certificados

--- a/documentos/templates/documentos/gerar_certificados.html
+++ b/documentos/templates/documentos/gerar_certificados.html
@@ -38,7 +38,8 @@
   <label><input id="orientador" onchange="($(this).prop('checked') ? $('.orientador').show() : $('.orientador').hide())" type="checkbox" checked /> Orientadores</label>&nbsp;&nbsp;&nbsp;
   <label><input id="coorientador" onchange="($(this).prop('checked') ? $('.coorientador').show() : $('.coorientador').hide())" type="checkbox" checked /> Coorientadores</label>&nbsp;&nbsp;&nbsp;
   <label><input id="banca" onchange="($(this).prop('checked') ? $('.banca').show() : $('.banca').hide())" type="checkbox" checked /> Bancas</label>&nbsp;&nbsp;&nbsp;
-  <label><input id="mentoria" onchange="($(this).prop('checked') ? $('.mentoria').show() : $('.mentoria').hide())" type="checkbox" checked /> Mentoria</label>&nbsp;&nbsp;&nbsp;
+  <label><input id="mentoria_tecnica" onchange="($(this).prop('checked') ? $('.mentoria_tecnica').show() : $('.mentoria_tecnica').hide())" type="checkbox" checked /> Mentorias Técnicas</label>&nbsp;&nbsp;&nbsp;
+  <label><input id="mentoria_falconi" onchange="($(this).prop('checked') ? $('.mentoria_falconi').show() : $('.mentoria_falconi').hide())" type="checkbox" checked /> Mentorias Falconi</label>&nbsp;&nbsp;&nbsp;
   <br>
 
   {% if certificados %}
@@ -54,7 +55,9 @@
         {% elif certificado.tipo_de_certificado == 103 or certificado.tipo_de_certificado == 104 or certificado.tipo_de_certificado == 105 %}
           <tr class="banca">
         {% elif certificado.tipo_de_certificado == 106 %}
-          <tr class="mentoria">
+          <tr class="mentoria_falconi">
+        {% elif certificado.tipo_de_certificado == 107 %}
+          <tr class="mentoria_tecnica">
         {% endif %}
         
         <td>
