enviando mensagens de avisos para outros usuários

--- a/operacional/templates/operacional/edita_aviso.html
+++ b/operacional/templates/operacional/edita_aviso.html
@@ -42,7 +42,7 @@
       <input type="checkbox" id="comite_pfe" name="comite_pfe" {% if aviso.comite_pfe %}checked{% endif %}>
       &nbsp;&nbsp;&nbsp;
 
-      <label for="todos_alunos">Alunos</label>
+      <label for="todos_alunos">Estudantes</label>
       <input type="checkbox" id="todos_alunos" name="todos_alunos" {% if aviso.todos_alunos %}checked{% endif %}>
       &nbsp;&nbsp;&nbsp;
 
