mostrando se orientador avaliou relato

--- a/projetos/templates/projetos/projeto_completo.html
+++ b/projetos/templates/projetos/projeto_completo.html
@@ -335,24 +335,7 @@
   {% endif %}
 
   <hr>
-  <h3>Relatos Quinzenais</h3>
-  {% for evento, relatos in projeto.get_relatos %}
-    <p style="padding-left: 18px;">
-      <a href="{% url 'relato_avaliar' projeto.id evento.id %}">
-        {{ forloop.counter }} - Relatos {{evento.endDate}}
-      <a>
-      {% for alocacao in alocacoes %}
-        <small>
-        {% if alocacao.id in relatos %}
-          &#9989;
-        {% else %}
-          &#10060;
-        {% endif %}
-        </small>
-      {% endfor %}
-    </p>
-  {% endfor %}
-
+  {% include "relatos.html" %}
 
   <hr>
   <h3>Documentos
