--- a/professores/templates/professores/relato_avaliar.html
+++ b/professores/templates/professores/relato_avaliar.html
@@ -234,7 +234,7 @@
   {% endfor %}
 
   <label for="observacoes">Informe suas observações para a coordenação do PFE.</label><br>
-  <textarea id="observacoes" name="observacoes" rows="18" cols="164" maxlength="4096" placeholder="Caso identifique alguma dificuldade com algum aluno ou o grupo, descreva aqui que a coordenação do PFE irá lhe auxiliar."></textarea>
+  <textarea id="observacoes" name="observacoes" rows="18" cols="164" maxlength="4096" placeholder="Caso identifique alguma dificuldade com algum aluno ou o grupo, descreva aqui que a coordenação do PFE irá lhe auxiliar.">{% if observacoes %}{{observacoes}}{% endif %}</textarea>
 
   <p>&nbsp;</p>
 
