sistema de avaliação de relato de orientadores

--- a/professores/templates/professores/index_professor.html
+++ b/professores/templates/professores/index_professor.html
@@ -18,6 +18,11 @@
         <li><a href="{% url 'dinamicas_index' %}">Mentorias</a></li>
     </ul>
 
+    <h5>Relatos Quinzenais</h5>
+    <ul>
+        <li><a href="{% url 'relatos_quinzenais' %}">Verificar Relatos Quinzenais</a></li>
+    </ul>
+
     <h5>Áreas de Interesse</h5>
     <ul>
         <li><a href="{% url 'distribuicao_areas' %}">Tendência de Áreas de Interesse (Estudantes/Propostas/Projetos)</a></li>
