--- a/professores/templates/professores/relatos_quinzenais.html
+++ b/professores/templates/professores/relatos_quinzenais.html
@@ -49,6 +49,10 @@
       <hr>
     {% endif %}
 
+  {% empty %}
+
+    Você não está alocado em projetos esse semestre.
+
   {% endfor %}
 
   <p>&nbsp;</p>
