visão geral dos relatos

--- a/professores/templates/professores/index_professor.html
+++ b/professores/templates/professores/index_professor.html
@@ -81,6 +81,13 @@
             </ul>
         </li>
 
+        <li>Relatos dos Estudantes</li>
+        <li style="list-style-type:none;margin-bottom: 1em;">
+            <ul>
+                <a href="{% url 'relatos_quinzenais_todos' %}"><li>Relatos Quinzenais</li></a>
+            </ul>
+        </li>
+
     </ul>
 
     <p>&nbsp;</p>
