--- a/professores/templates/professores/relatos_quinzenais.html
+++ b/professores/templates/professores/relatos_quinzenais.html
@@ -17,8 +17,9 @@
 
   {% for projeto in projetos %}
 
-    <strong>Projeto:</strong> {{projeto.get_titulo}}<br>
+    <strong>Projeto:</strong> <a href="{% url 'projeto_completo' projeto.id %}">{{projeto.get_titulo}}</a><br>
     <strong>Semestre:</strong> {{projeto.ano}}.{{projeto.semestre}}<br>
+    {% if administracao %}<strong>Orientador:</strong> <a href="{% url 'professor_detail' projeto.orientador.id %}">{{projeto.orientador}}</a><br>{% endif %}
     {% if projeto.avancado or projeto.proposta.internacional %}
       <p><strong>Tipo</strong>:
 
