--- a/professores/templates/professores/relato_avaliar.html
+++ b/professores/templates/professores/relato_avaliar.html
@@ -107,11 +107,13 @@
 
         <label>Desempenho esperado</label>:&nbsp;&nbsp;&nbsp;&nbsp;
         <div class="custom-control custom-radio custom-control-inline">
-          <input type="radio" id="customRadioInline0{{relato.id}}" name="op.{{relato.id}}" class="custom-control-input" value="1" {% if not relato %}disabled {% else %} {% if relato.avaliacao > 0 %}checked="checked"{% endif %} {% endif %}>
+          <input type="radio" id="customRadioInline0{{relato.id}}" name="op.{{relato.id}}" class="custom-control-input"
+                 value="1" {% if relato.avaliacao > 0 %}checked="checked"{% endif %} {% if not relato or not editor %}disabled {% endif %}>
           <label class="custom-control-label" for="customRadioInline0{{relato.id}}">Adequado</label>
         </div>
         <div class="custom-control custom-radio custom-control-inline">
-          <input type="radio" id="customRadioInline1{{relato.id}}" name="op.{{relato.id}}" class="custom-control-input" value="0" {% if not relato %}disabled {% else %} {% if relato.avaliacao == 0 %}checked="checked"{% endif %} {% endif %}>
+          <input type="radio" id="customRadioInline1{{relato.id}}" name="op.{{relato.id}}" class="custom-control-input"
+                 value="0" {% if relato.avaliacao == 0 %}checked="checked"{% endif %} {% if not relato or not editor %}disabled {% endif %}>
           <label class="custom-control-label" for="customRadioInline1{{relato.id}}">Inadequado</label>
         </div>
 
@@ -234,13 +236,17 @@
   {% endfor %}
 
   <label for="observacoes">Informe suas observações para a coordenação do PFE.</label><br>
-  <textarea id="observacoes" name="observacoes" rows="18" cols="164" maxlength="4096" placeholder="Caso identifique alguma dificuldade com algum aluno ou o grupo, descreva aqui que a coordenação do PFE irá lhe auxiliar.">{% if observacoes %}{{observacoes}}{% endif %}</textarea>
+  <textarea id="observacoes" name="observacoes" rows="18" cols="164" maxlength="4096" {% if not editor %}disabled{% endif %}
+            placeholder="Caso identifique alguma dificuldade com algum aluno ou o grupo, descreva aqui que a coordenação do PFE irá lhe auxiliar.">{% if observacoes %}{{observacoes}}{% endif %}</textarea>
 
-  <p>&nbsp;</p>
-
-    <button type="submit">Enviar</button>
     <p>&nbsp;</p>
 
+    {% if editor %}
+      <button type="submit">Enviar</button>
+    {% endif %}
+
     </form>
+
+  <p>&nbsp;</p>
 
 {% endblock %}
