--- a/projetos/templates/projetos/analise_notas.html
+++ b/projetos/templates/projetos/analise_notas.html
@@ -8,6 +8,7 @@
 {% block head %}
 
   {% load static %}
+  {% load addstr %}
   
   <script src="{% static 'js/w3.js' %}"></script>
   <script src="{% static 'js/Chart.min.js' %}"></script>
@@ -20,6 +21,16 @@
   <script src="{% static 'js/html2canvas.min.js' %}"></script>
   <script src="{% static 'js/jspdf.min.js' %}"></script>
 
+  <style>
+    .cabecalho {
+      float: left;
+      position: relative;
+      margin-top: 0px;
+      outline-width: 0;
+      background-color: none;
+    }
+  </style>
+
 {% endblock %}
 
 {% block content %}
@@ -29,20 +40,29 @@
     function reajusta() { }
   </script>
 
-  {% with file_name="analise_notas" %}
-    {% include "save_image.html" %}
-  {% endwith %}
-
     <div id="tudo">
 
-    <span class="titulo">Análise de Notas/Conceitos</span>
+    <div class="cabecalho">
 
-    {% comment %} Seletor da edição da pesquisa {% endcomment %}
-    {% with com_cursos=True %}
-        {% include "edicoes.html" %}
-    {% endwith %}
+        <span class="titulo">Análise de Notas/Conceitos</span>
+
+        {% comment %} Seletor da edição da pesquisa {% endcomment %}
+        {% with com_cursos=True %}
+            {% include "edicoes.html" %}
+        {% endwith %}
+
+    </div>
 
     <div class="atualizar">
+
+        {% if periodo and curso %}
+            {% with file_name="analise_notas_"|addstr:periodo.0|addstr:"_"|addstr:periodo.1|addstr:"_"|addstr:curso %}
+                {% include "save_image.html" %}
+            {% endwith %}
+        {% endif %}
+
+        <div><br><br><br></div>{% comment %} Solução pouco elegante, mas funciona. {% endcomment %}
+
         <div class="container">
 
             {% if medias.ideal or medias.regular or medias.inferior %}
