--- a/projetos/templates/projetos/analise_objetivos.html
+++ b/projetos/templates/projetos/analise_objetivos.html
@@ -8,7 +8,7 @@
 {% block head %}
 
   {% load static %}
-
+  {% load addstr %}
   {% load l10n %}
 
   <script src="{% static 'js/w3.js' %}"></script>
@@ -23,6 +23,16 @@
   <script src="{% static 'js/html2canvas.min.js' %}"></script>
   <script src="{% static 'js/jspdf.min.js' %}"></script>
 
+  <style>
+    .cabecalho {
+      float: left;
+      position: relative;
+      margin-top: 0px;
+      outline-width: 0;
+      background-color: none;
+    }
+  </style>
+
 {% endblock %}
 
 {% block content %}
@@ -32,21 +42,28 @@
         function reajusta() { }
     </script>
 
-    {% with file_name="analise_objetivos" %}
-        {% include "save_image.html" %}
-    {% endwith %}
-
     <div id="tudo">
 
-    <span class="titulo">Análise por Objetivos de Aprendizado</span>
+        <div class="cabecalho">
+        
+            <span class="titulo">Análise por Objetivos de Aprendizado</span>
 
-    {% comment %} Seletor da edição da pesquisa {% endcomment %}
-    {% with com_cursos=True %}
-        {% include "edicoes.html" %}
-    {% endwith %}
+            {% comment %} Seletor da edição da pesquisa {% endcomment %}
+            {% with com_cursos=True %}
+                {% include "edicoes.html" %}
+            {% endwith %}
 
-    
+        </div>
+        
     <div class="atualizar">
+
+        {% if periodo and curso %}
+            {% with file_name="analise_objetivos_"|addstr:periodo.0|addstr:"_"|addstr:periodo.1|addstr:"_"|addstr:curso %}
+                {% include "save_image.html" %}
+            {% endwith %}
+        {% endif %}
+
+        <div><br><br><br></div>{% comment %} Solução pouco elegante, mas funciona. {% endcomment %}
 
         <div class="container">
         
