--- a/projetos/templates/projetos/correlacao_medias_cr.html
+++ b/projetos/templates/projetos/correlacao_medias_cr.html
@@ -8,7 +8,7 @@
 {% block head %}
 
   {% load static %}
-  
+  {% load addstr %}
   {% load l10n %}
 
   <script src="{% static 'js/w3.js' %}"></script>
@@ -24,6 +24,16 @@
   <script src="{% static 'js/html2canvas.min.js' %}"></script>
   <script src="{% static 'js/jspdf.min.js' %}"></script>
 
+  <style>
+    .cabecalho {
+      float: left;
+      position: relative;
+      margin-top: 0px;
+      outline-width: 0;
+      background-color: none;
+    }
+  </style>
+
 {% endblock %}
 
 {% block content %}
@@ -33,31 +43,41 @@
         function reajusta() { }
     </script>
 
-    {% with file_name="correlacao" %}
-        {% include "save_image.html" %}
-    {% endwith %}
-
     <div id="tudo">
 
-    <span class="titulo">Correlação entre Médias e CR</span>
+        <div class="cabecalho">
 
-    {% comment %} Seletor da edição da pesquisa {% endcomment %}
-    {% with com_cursos=True %}
-        {% include "edicoes.html" %}
-    {% endwith %}
+            <span class="titulo">Correlação entre Médias e CR</span>
 
-    <div class="input-group input-group-sm mt-1">
-        <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="individual" id="inlineRadio1" value="media" checked>
-            <label class="form-check-label" for="inlineRadio1">Médias Finais</label>
+            {% comment %} Seletor da edição da pesquisa {% endcomment %}
+            {% with com_cursos=True %}
+                {% include "edicoes.html" %}
+            {% endwith %}
+
+            <div class="input-group input-group-sm mt-1">
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="individual" id="inlineRadio1" value="media" checked>
+                    <label class="form-check-label" for="inlineRadio1">Médias Finais</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="individual" id="inlineRadio2" value="individual">
+                    <label class="form-check-label" for="inlineRadio2">Notas Individuais</label>
+                </div>
+            </div>
+
         </div>
-        <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="individual" id="inlineRadio2" value="individual">
-            <label class="form-check-label" for="inlineRadio2">Notas Individuais</label>
-        </div>
-    </div>
 
     <div class="atualizar">
+
+        {% if periodo and curso %}
+            {% with file_name="correlacao_"|addstr:periodo.0|addstr:"_"|addstr:periodo.1|addstr:"_"|addstr:curso %}
+                {% include "save_image.html" %}
+            {% endwith %}
+        {% endif %}
+
+        <div><br><br><br></div>{% comment %} Solução pouco elegante, mas funciona. {% endcomment %}
+
+
         <div class="container">
 
             {% if True %}
