--- a/projetos/templates/projetos/evolucao_notas.html
+++ b/projetos/templates/projetos/evolucao_notas.html
@@ -8,7 +8,7 @@
 {% block head %}
 
   {% load static %}
-  
+  {% load addstr %}
   {% load l10n %}
 
   <script src="{% static 'js/w3.js' %}"></script>
@@ -22,6 +22,16 @@
   <script src="{% static 'js/html2canvas.min.js' %}"></script>
   <script src="{% static 'js/jspdf.min.js' %}"></script>
 
+  <style>
+    .cabecalho {
+      float: left;
+      position: relative;
+      margin-top: 0px;
+      outline-width: 0;
+      background-color: none;
+    }
+  </style>
+
 {% endblock %}
 
 {% block content %}
@@ -31,24 +41,33 @@
         function reajusta() { }
     </script>
 
-    {% with file_name="evolucao_notas" %}
-        {% include "save_image.html" %}
-    {% endwith %}
-
-    <span class="titulo">Evolução por Notas/Conceitos</span>
-    
-    {% comment %} Seletor da edição da pesquisa {% endcomment %}
-    {% with sem_edicao=True %}
-    {% with com_cursos=True %}
-        {% include "edicoes.html" %}
-    {% endwith %}
-    {% endwith %} 
-
     <div id="tudo">
+
+        <div class="cabecalho">
+
+            <span class="titulo">Evolução por Notas/Conceitos</span>
+            
+            {% comment %} Seletor da edição da pesquisa {% endcomment %}
+            {% with sem_edicao=True %}
+            {% with com_cursos=True %}
+                {% include "edicoes.html" %}
+            {% endwith %}
+            {% endwith %} 
+
+        </div>
 
     {% comment %} Seletor da edição da pesquisa {% endcomment %}
     
     <div class="atualizar">
+
+    {% if curso %}
+        {% with file_name="evolucao_notas_"|addstr:curso %}
+            {% include "save_image.html" %}
+        {% endwith %}
+    {% endif %}
+
+    <div><br><br><br></div>{% comment %} Solução pouco elegante, mas funciona. {% endcomment %}
+
     <div class="container">
 
         <div style="width:860px;"> 
