--- a/templates/edicoes.html
+++ b/templates/edicoes.html
@@ -77,6 +77,14 @@
 
         {% endif %}
 
+        {% if so_finais %}
+          <span class="input-group-addon">&nbsp;&nbsp;&nbsp;&nbsp;</span>
+          <div class="form-check mb-2 mr-sm-2">
+            <input class="filter form-check-input" type="checkbox" id="so_finais" checked >
+            <label class="form-check-label" for="so_finais">Só avaliações finais</label>
+          </div>
+        {% endif %}
+
         <div id="spinner" class="ml-2 input-group-append" style="visibility: hidden">
           <div class="spinner-border text-secondary ml-auto" style="width: 1.8rem; height: 1.8rem;" role="status" aria-hidden="true">
             <span class="sr-only input-group-text">Carregando...</span>
