--- a/calendario/templates/calendario/calendario.html
+++ b/calendario/templates/calendario/calendario.html
@@ -477,6 +477,15 @@
           if (data.atualizado) {
             console.log("Evento removido.");
           }
+        },
+        error: function (request, status, error) {
+          {% if user.tipo_de_usuario == 4 %} 
+            alert(request.responseText);
+            jQuery("body").html(request.responseText.replace(/\n/g,"<br>"));
+            console.log('error'+request.responseText);
+          {% else %}
+            jQuery("body").html("Erro no servidor do PFE. Por favor contactar: <a href='mailto:lpsoares@insper.edu.br'>lpsoares@insper.edu.br</a>");
+          {% endif %}
         }
       });
 
@@ -559,8 +568,14 @@
             $('#event-modal').modal('hide');
           }
         },
-        error: function(response) {
-            console.log('error')
+        error: function (request, status, error) {
+          {% if user.tipo_de_usuario == 4 %} 
+            alert(request.responseText);
+            jQuery("body").html(request.responseText.replace(/\n/g,"<br>"));
+            console.log('error'+request.responseText);
+          {% else %}
+            jQuery("body").html("Erro no servidor do PFE. Por favor contactar: <a href='mailto:lpsoares@insper.edu.br'>lpsoares@insper.edu.br</a>");
+          {% endif %}
         }
       });
 
