--- a/estudantes/templates/estudantes/selecao_propostas.html
+++ b/estudantes/templates/estudantes/selecao_propostas.html
@@ -215,7 +215,15 @@
               'csrfmiddlewaretoken': '{{ csrf_token }}',
           },
           success: function(response){},
-          error: function(response) {}
+          error: function (request, status, error) {
+            {% if user.tipo_de_usuario == 4 %} 
+              alert(request.responseText);
+              jQuery("body").html(request.responseText.replace(/\n/g,"<br>"));
+              console.log('error'+request.responseText);
+            {% else %}
+              jQuery("body").html("Erro no servidor do PFE. Por favor contactar: <a href='mailto:lpsoares@insper.edu.br'>lpsoares@insper.edu.br</a>");
+            {% endif %}
+          }
       });
 
     }
