--- a/operacional/templates/operacional/avisos_listar.html
+++ b/operacional/templates/operacional/avisos_listar.html
@@ -234,6 +234,15 @@
           if (data.atualizado) {
             console.log("Valor atualizado.");
           }
+        },
+        error: function (request, status, error) {
+          {% if user.tipo_de_usuario == 4 %} 
+            alert(request.responseText);
+            jQuery("body").html(request.responseText.replace(/\n/g,"<br>"));
+            console.log('error'+request.responseText);
+          {% else %}
+            jQuery("body").html("Erro no servidor do PFE. Por favor contactar: <a href='mailto:lpsoares@insper.edu.br'>lpsoares@insper.edu.br</a>");
+          {% endif %}
         }
       });
     });
