--- a/organizacoes/templates/organizacoes/organizacoes_prospectadas.html
+++ b/organizacoes/templates/organizacoes/organizacoes_prospectadas.html
@@ -362,6 +362,15 @@
           if (data.atualizado) {
             console.log("Valor atualizado.");
           }
+        },
+        error: function (request, status, error) {
+          {% if user.tipo_de_usuario == 4 %} 
+            alert(request.responseText);
+            jQuery("body").html(request.responseText.replace(/\n/g,"<br>"));
+            console.log('error'+request.responseText);
+          {% else %}
+            jQuery("body").html("Erro no servidor do PFE. Por favor contactar: <a href='mailto:lpsoares@insper.edu.br'>lpsoares@insper.edu.br</a>");
+          {% endif %}
         }
       });
 
@@ -392,6 +401,15 @@
           if (data.atualizado) {
             console.log("Valor atualizado.");
           }
+        },
+        error: function (request, status, error) {
+          {% if user.tipo_de_usuario == 4 %} 
+            alert(request.responseText);
+            jQuery("body").html(request.responseText.replace(/\n/g,"<br>"));
+            console.log('error'+request.responseText);
+          {% else %}
+            jQuery("body").html("Erro no servidor do PFE. Por favor contactar: <a href='mailto:lpsoares@insper.edu.br'>lpsoares@insper.edu.br</a>");
+          {% endif %}
         }
       });
 
@@ -444,10 +462,15 @@
                   filtra_data();
                   $("#spinner").css("visibility", "hidden");
               },
-              error: function(response) {
-                  alert('error');
+              error: function (request, status, error) {
+                {% if user.tipo_de_usuario == 4 %} 
+                  alert(request.responseText);
+                  jQuery("body").html(request.responseText.replace(/\n/g,"<br>"));
+                  console.log('error'+request.responseText);
+                {% else %}
+                  jQuery("body").html("Erro no servidor do PFE. Por favor contactar: <a href='mailto:lpsoares@insper.edu.br'>lpsoares@insper.edu.br</a>");
+                {% endif %}
               }
-
           });
       });
   </script>
