--- a/projetos/templates/projetos/histograma.html
+++ b/projetos/templates/projetos/histograma.html
@@ -51,8 +51,14 @@
                 $("div.2areas2").replaceWith($("div.2areas2",response));
                 bar();
             },
-            error: function(response) {
-                alert('error');
+            error: function (request, status, error) {
+              {% if user.tipo_de_usuario == 4 %} 
+                alert(request.responseText);
+                jQuery("body").html(request.responseText.replace(/\n/g,"<br>"));
+                console.log('error'+request.responseText);
+              {% else %}
+                jQuery("body").html("Erro no servidor do PFE. Por favor contactar: <a href='mailto:lpsoares@insper.edu.br'>lpsoares@insper.edu.br</a>");
+              {% endif %}
             }
         });
     }
