--- a/propostas/templates/propostas/proposta_completa.html
+++ b/propostas/templates/propostas/proposta_completa.html
@@ -186,8 +186,14 @@
               console.log("Valor atualizado.");
             }
           },
-          error: function(response) {
-              console.log('error')
+          error: function (request, status, error) {
+            {% if user.tipo_de_usuario == 4 %} 
+              alert(request.responseText);
+              jQuery("body").html(request.responseText.replace(/\n/g,"<br>"));
+              console.log('error'+request.responseText);
+            {% else %}
+              jQuery("body").html("Erro no servidor do PFE. Por favor contactar: <a href='mailto:lpsoares@insper.edu.br'>lpsoares@insper.edu.br</a>");
+            {% endif %}
           }
       });
     }
@@ -214,8 +220,14 @@
             console.log("Valor atualizado.");
           }
         },
-        error: function(response) {
-            console.log('error')
+        error: function (request, status, error) {
+          {% if user.tipo_de_usuario == 4 %} 
+            alert(request.responseText);
+            jQuery("body").html(request.responseText.replace(/\n/g,"<br>"));
+            console.log('error'+request.responseText);
+          {% else %}
+            jQuery("body").html("Erro no servidor do PFE. Por favor contactar: <a href='mailto:lpsoares@insper.edu.br'>lpsoares@insper.edu.br</a>");
+          {% endif %}
         }
       });
     });
