--- a/templates/annotation-modal2.html
+++ b/templates/annotation-modal2.html
@@ -83,8 +83,14 @@
             $("#sem_anotacoes").hide();
 
         },
-        error: function(response) {
-            console.log('error')
+        error: function (request, status, error) {
+          {% if user.tipo_de_usuario == 4 %} 
+            alert(request.responseText);
+            jQuery("body").html(request.responseText.replace(/\n/g,"<br>"));
+            console.log('error'+request.responseText);
+          {% else %}
+            jQuery("body").html("Erro no servidor do PFE. Por favor contactar: <a href='mailto:lpsoares@insper.edu.br'>lpsoares@insper.edu.br</a>");
+          {% endif %}
         }
     });
 
