--- a/templates/edicoes_ajax.html
+++ b/templates/edicoes_ajax.html
@@ -70,11 +70,15 @@
               carrega_pagina();
               $("#spinner").css("visibility", "hidden");
           },
-          {% comment %}
-            error: function(response) {
-                console.log('error: '+response.statusText)
-            }
-          {% endcomment %}
+          error: function (request, status, error) {
+            {% if user.tipo_de_usuario == 4 %} 
+              alert(request.responseText);
+              jQuery("body").html(request.responseText.replace(/\n/g,"<br>"));
+              console.log('error'+request.responseText);
+            {% else %}
+              jQuery("body").html("Erro no servidor do PFE. Por favor contactar: <a href='mailto:lpsoares@insper.edu.br'>lpsoares@insper.edu.br</a>");
+            {% endif %}
+          }
       });
     }
 
