--- a/operacional/templates/operacional/edita_aviso.html
+++ b/operacional/templates/operacional/edita_aviso.html
@@ -56,6 +56,17 @@
       <br><br>
 
       <button type="submit">Atualizar Aviso</button>
+      &nbsp;&nbsp;
+      <button type="button" id="apagar">Apagar Aviso</button>
+
+      <script type="text/javascript">
+        $('#apagar').click(function() {
+          if(confirm('Are you sure?')){
+            window.location = "{% url 'deleta_aviso' aviso.id %}";
+          }
+        });
+      </script>
+
       <p>&nbsp;</p>
     </form>
 
