--- a/professores/templates/professores/bancas_lista.html
+++ b/professores/templates/professores/bancas_lista.html
@@ -175,7 +175,7 @@
               <ul style="margin-bottom:0px;">
                 {% for coorientador in coorientadores %}
                   <li>
-                    <a class="imprimir" href="{% url 'professor_detail' coorientador.id %}">
+                    <a class="imprimir" href="{% url 'user_detail' coorientador.usuario.id %}">
                       {{coorientador.usuario.get_full_name}} 
                     </a>
                     <a class="email" href="mailto:{{coorientador.usuario.email}}">&lt;{{coorientador.usuario.email}}&gt;</a>
